APERTA-5903 Fix 'Recent Activity' to not wrap

--- a/app/assets/stylesheets/components/_control-bar.scss
+++ b/app/assets/stylesheets/components/_control-bar.scss
@@ -124,9 +124,13 @@
   height: 22px;
 }
 
-.activity-link svg {
-  position: relative;
-  top: -5px;
+.activity-link {
+  white-space: nowrap;
+  overflow: hidden;
+  svg {
+    position: relative;
+    top: -5px;
+  }
 }
 
 .paper-navigation-link {
